# quantum_decision_theory

./: README.md  fair_qdt_demo_app.py  fair_quantum_decision_theory.py  main.py  pyproject.toml
