[project]
name = "quantum-decision-theory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "plotly>=6.3.0",
    "qiskit>=2.1.1",
    "qiskit-aer>=0.17.1",
    "qiskit-machine-learning>=0.8.2",
    "scikit-learn>=1.7.1",
    "streamlit>=1.48.1",
]

